2006-11-17  Dave Nomura  <dcnltc@us.ibm.com>

	* doc/Makefile.am:
	* doc/opreport.1.in:
	* doc/opreport.xsd:
	* doc/oprofile.xml:
	* libop/op_alloc_counter.c:
	* libpp/Makefile.am:
	* libpp/arrange_profiles.cpp:
	* libpp/format_output.cpp:
	* libpp/format_output.h:
	* libpp/op_header.cpp:
	* libpp/profile_container.cpp:
	* libpp/symbol.cpp:
	* libpp/symbol.h:
	* libpp/xml_utils.cpp:
	* libpp/xml_utils.h:
	* libutil++/Makefile.am:
	* libutil++/bfd_support.cpp:
	* libutil++/cverb.cpp:
	* libutil++/cverb.h:
	* libutil++/op_bfd.cpp:
	* libutil++/op_bfd.h:
	* libutil++/xml_output.cpp:
	* libutil++/xml_output.h:
	* pp/common_option.cpp:
	* pp/common_option.h:
	* pp/oparchive_options.cpp:
	* pp/opgprof_options.cpp:
	* pp/opreport.cpp:
	* pp/opreport_options.cpp:
	* pp/opreport_options.h: XML output support.

2006-8-03  Jeremiah Lott  <jeremiah.lott@timesys.com>

	* libop/op_alloc_counter.c: allocate_counter(...) was returning
	  prior to considering all possible allocation strategies.

2006-11-15  Adam Bordelon  <me@cs.rice.edu>

	* doc/internals.xml:
	* doc/opannotate.1.in:
	* doc/oparchive.1.in:
	* doc/opcontrol.1.in:
	* doc/opgprof.1.in:
	* doc/opreport.1.in:
	* doc/oprofile.xml: Documented --session-dir option.
 
 	* daemon/init.c:
	* daemon/liblegacy/init.c:
	* daemon/oprofiled.c:
	* libop/Makefile.am:
	* libop/op_config.c:
	* libop/op_config.h:
	* libop/op_config_24.h:
	* libop/op_mangle.c:
	* libpp/profile_spec.c:
	* pp/common_option.cpp:
	* utils/opcontrol: Added --session-dir option, to place sample database in dir instead of default location (/var/lib/oprofile), and program can be run as normal user.

2006-11-15  John Levon  <levon@movementarian.org>

	* events/x86-64/hammer/events: fix event names with '/' in them
	  (bug 1597054)

	* libop/op_events.c: check for '/' and fail if so

2006-11-09  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/opreport.1.in: 
	* doc/oprofile.xml: --long-filenames : -f is the short opt, not -l
